--- a/package.json
+++ b/package.json
@@ -7,13 +7,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
-    "grunt": "~0.4.1",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-uglify": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-cssnano": "^2.1.0",
-    "grunt-postcss": "^0.8.0",
-    "grunt-sass": "^1.2.0",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.1",
     "postcss-cli": "^2.5.2",
     "postcss-flexbugs-fixes": "^2.0.0"
   }
