--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "autoprefixer": "^6.4.1",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.1",
+    "jquery": "^3.3.1",
     "postcss-cli": "^2.5.2",
     "postcss-flexbugs-fixes": "^2.0.0"
   }
